--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,9 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ * /assets/stylesheets全てのCSSファイルが application.cssに含まれる設定
  *= require_tree .
+ *
+ * CSSの読み込みシーケンスの中で application.css自身もその対象に含める設定
  *= require_self
  */
