--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <div class="container">
       <%= yield %>
       <%= render 'layouts/footer' %>
+      <!--サイトのレイアウトにデバッグ情報を追加する-->
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
