--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <!--success、info、warning、danger-->
+        <!--<div class="alert alert-<%#= message_type %>"><%#= message %></div>-->
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
       <!--サイトのレイアウトにデバッグ情報を追加する-->
