--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -4,7 +4,8 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
-      <%= render 'shared/error_messages' %>
+      <!--フォーム変数fをf.object(@user)とすると、関連付けられたオブジェクトにアクセス可能-->
+      <%= render 'shared/error_messages', object: f.object %>
 
       <%= hidden_field_tag :email, @user.email %>
       <!--f.hidden_field :email, @user.email だと パラメーターは params[:user][:email] となってしまう-->
