--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,8 @@
 <!-- Active Recordのnew_record?メソッドで post か patch かを見分けてる。User.new.new_record? ⇨ true -->
 <!-- <input type="hidden" name="_method" value="patch"> -->
 <%= form_for(@user) do |f| %>
-  <%= render 'shared/error_messages' %>
+  <!--フォーム変数fをf.object(@user)とすると、関連付けられたオブジェクトにアクセス可能-->
+  <%= render 'shared/error_messages', object: f.object %>
 
   <%= f.label :name %>
   <%= f.text_field :name, class: 'form-control' %>
