--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,8 +4,19 @@
     <section class="user_info">
       <h1>
         <%= gravatar_for @user, size: 80 %>
-        <%= @user.name %>
+        <%= @user.name %><br>
       </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @user.microposts.any? %>
+      <!--countはデータを全て出力してlengthで数えるのではなく、
+      @userのmicropost数をDBに直接問い合わせるので処理が高速-->
+      <h3>Microposts (<%= @user.microposts.count %>)</h3>
+      <ol class="microposts">
+        <%= render @microposts %>
+      </ol>
+      <%= will_paginate @microposts %>
+    <% end %>
+  </div>
 </div>
