--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,7 +1,12 @@
 <li id="micropost-<%= micropost.id %>">
   <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
   <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
-  <span class="content"><%= micropost.content %></span>
+  <span class="content">
+    <%= micropost.content %>
+    <!--image_tagヘルパーで画像を描画できる。画像の無い (テキストのみの) マイクロポストでは、-->
+    <!--画像を表示させないようにするために picture? という論理値を返すメソッドを使っている-->
+    <%= image_tag micropost.picture.url if micropost.picture? %>
+  </span>
   <span class="timestamp">
     <!--gemの action_view/helpers 内のデフォルトHelperメソッド(今日からの差分を表示)-->
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
